# usdassimp

./: CMakeLists.txt  README.md
src/: CMakeLists.txt  fileFormat.cpp  fileFormat.h  main.cpp  translator.cpp  translator.h
src/usdAssimp/resources/: plugInfo.json
tests/: CMakeLists.txt  example1.ply  example1.usda
tests/usdiffs/: CMakeLists.txt  main.cpp
